test_src/compiler_errors/types/binary/RightShiftBoolError2.b
class RightShiftBoolError2 {
    void test() {
        println(2 >> false);
    }
}
